--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "react-scripts test"
+    "test": "vitest"
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -16,8 +16,8 @@
     "@testing-library/react": "^16.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^7.9.1"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -28,6 +28,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "jsdom": "^27.0.0",
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4"
   }
 }
